Stuff is starting to come together...

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Busuu + React</title>
+		<link rel="stylesheet" href="styles/busuu-bootstrap.css">
 		<link rel="stylesheet" href="styles/main.css">
 		<link rel="stylesheet" href="styles/busuu.css">
 	</head>
