--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	</head>
 	<body>
 		
-      <div id="recording-exercise"></div>
+      <div id="app"></div>
 
       <script src="js/bundle.js"></script>
 	</body>
