--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
 		
       <div id="app"></div>
 
+      <div class="recorderFlashWrapper">
+        <h1 >RECORDING_SETUP_INSTRUCTIONS</h1>
+        <div id="recorderFlashContainer"></div>
+      </div>
+	
+			<script src="js/swfobject.js"></script>
       <script src="js/bundle.js"></script>
 	</body>
 </html>
